# financial_engine_single

./: .gitignore  Cargo.toml  DOCUMENTATION_SINHALA.md  Dockerfile  README.md  USAGE_GUIDE_SINHALA.md  cloudbuild.yaml  docker-compose.yml  fix_permissions.sh  setup_db.sh  switch_to_supabase.sh
.github/workflows/: ci.yml  deploy.yml
src/: accounts.rs  advanced_payments.rs  lib.rs  main.rs
src/api/: facade.rs  ffi.rs  mod.rs  rest.rs  routes.rs
src/audit/: logger.rs  mod.rs  sentry.rs
src/core/: calculation.rs  errors.rs  logger.rs  mod.rs  money.rs  rounding.rs
src/discount/: fixed.rs  item_discount.rs  mod.rs  percentage.rs  tiered.rs
src/examples/: advanced_scenarios.rs
src/inventory/: mod.rs  stock.rs  warehouse.rs
src/ledger/: account.rs  engine.rs  journal.rs  mod.rs  transaction.rs
src/plugins/: registry.rs  traits.rs
src/refund/: mod.rs  processor.rs  types.rs
src/rules/: builder.rs  conditions.rs  mixed_scenarios.rs  mod.rs  processor.rs  promotions.rs  traits.rs
src/security/: audit_trail.rs  checksum.rs  encryption.rs  gateway.rs  guard.rs  mod.rs  validator.rs
src/state/: mod.rs  snapshot.rs
src/storage/: config.rs  connector.rs  database.rs  mod.rs  models.rs  redis.rs
src/subscription/: billing.rs  mod.rs  plan.rs  proration.rs
src/tax/: calculator.rs  mod.rs  tax_rule.rs  vat.rs
src/types/: cart.rs  currency.rs  item.rs  mod.rs
tests/: complex_safeguard_test.rs  decimal_precision_test.rs  e2e_tests.rs
