[package]
name = "financial-engine"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "Ultimate financial calculation engine for enterprise banking"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
lazy_static = "1.4"
# Bank Grade Additions
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "uuid", "chrono", "rust_decimal"] }
rust_decimal = "1.33" # Floating point errors are unacceptable in banking. We use Decimal.
rust_decimal_macros = "1.33"
anyhow = "1.0"
async-trait = "0.1"
