[package]

name = "financial-engine"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "Ultimate financial calculation engine for enterprise banking"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Caching & Monitoring
redis = { version = "0.24", features = ["tokio-comp"] }
sentry = { version = "0.32", features = ["anyhow", "tracing"] }

sha2 = "0.10"
lazy_static = "1.4"
regex = "1.10"
anyhow = "1.0"
async-trait = "0.1"

# Banking Logic
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# Database (SQLx supports Postgres, SQLite etc)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "rust_decimal", "macros"] }

# Web Server & Microservice Layer
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"




[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization, reduces binary size
codegen-units = 1 # Remove parallelism to increase optimization
panic = "abort"  # Remove panic unwinding to reduce size
strip = true     # Strip symbols from binary
